tests/snapshots/examples_fixtures/type_system__66_real_program_base_module_integration.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/66_real_program_base_module_integration.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Flow.Array` to import.

  examples/type_system/TypeSystem/RealProgramBaseInterop.flx:1:1
  |
1 | import Flow.Array as Array
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Flow.Array.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Flow.Array` under roots: examples/type_system, src (imported from examples/type_system/TypeSystem/RealProgramBaseInterop.flx).
== stdout ==
<not executed>
